# vellum

./: .gitignore  README.md  package.json  test-all.sh  vercel.json
contract/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
contract/migrations/: deploy.ts
contract/programs/vellum-contract/: Cargo.toml
contract/programs/vellum-contract/src/: lib.rs
contract/tests/: vellum-contract.ts
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/companies/: page.tsx
frontend/src/app/create-invoice/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/invoices/: page.tsx
frontend/src/app/invoices/[id]/: page.tsx
frontend/src/components/: InvoiceCard.tsx  Navbar.tsx  Providers.tsx  StatusBadge.tsx  TaxCalculator.tsx  WalletContextProvider.tsx
frontend/src/lib/: connection.tsx  i18n.tsx  idl.json  idl.ts  models.ts  program.ts  vellumContractTypes.ts
