[package]
name = "vellum-contract"
version = "0.1.0"
description = "Vellum — B2B Invoicing + ViDA Tax Automation on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vellum_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"

[dev-dependencies]